--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "engines": {
+    "node":">= 20"
+  },
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
@@ -31,6 +34,7 @@
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "knex": "^3.1.0",
+    "pg": "^8.16.3",
     "sqlite3": "^5.1.7",
     "zod": "^4.1.13"
   }
